--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "hostel",
-    "slug": "snack-2220e212-d388-41ca-86ae-b1c8a1dc05c9",
+    "name": "rajia",
+    "slug": "snack-ea267a7a-050e-453a-8fb8-2e0d4adbdd29",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
