--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-native": "0.70.8",
+    "moment": "~2.29.4",
     "expo-constants": "~14.0.2",
     "@expo/vector-icons": "^13.0.0",
     "react-native-paper": "~5.8.0",
     "react-native-vector-icons": "~9.2.0",
     "@react-native-material/core": "*",
-    "react-native-safe-area-context": "4.4.1",
-    "moment": "~2.29.4"
+    "react-native-safe-area-context": "4.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
